--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.10.1",
+    "rollup": "^2.41.5",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "sirv-cli": "^0.3.1"
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sirv-cli": "^1.0.11"
   },
   "dependencies": {
-    "@revolist/svelte-datagrid": "1.0.0",
-    "svelte": "3.29.7"
+    "@revolist/svelte-datagrid": "3.0.0-beta.4",
+    "@stencil/core": "^2.4.0",
+    "svelte": "^3.35.0"
   },
   "scripts": {
     "build": "rollup -c",
